maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:7: error: not found: value x
    keepHandOnSideWall(x)
                       ^